# Chroma

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.json  buildImage.ps1  build_and_run.sh  c_files.txt  chroma.bxrc  chroma.iso  chroma.json  cmake_install.cmake  compile.py  init.sh  kernel.elf  linker.ld  makeiso.sh  post.sh  pre.sh  run.bat  setup.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml
arch/uefi_x64/: boot.s  linker.ld  make.config  sys_clock.c  tty.c
chroma/: kernel.c
chroma/inc/kernel/: chroma.h
chroma/inc/kernel/boot/: boot.h
chroma/inc/kernel/system/: descriptors.h  heap.h  interrupts.h  io.h  memory.h  pci.h
chroma/inc/kernel/video/: bitmapfont.h  tty.h  vga-textmode.h
chroma/inc/lainlib/list/: list.h
chroma/inc/lainlib/mutex/: spinlock.h  ticketlock.h
chroma/lainlib/: vector.c
chroma/lainlib/compression/: lzgmini.c
chroma/lainlib/ethernet/e1000/: E1000Driver.c
chroma/lainlib/mutex/: ticketlock.c
chroma/system/: cpu.c  interrupts.c  mem.c  pci.c  rw.c  serial.c
chroma/system/drivers/: keyboard.c
chroma/system/memory/: legacypaging.c  legacyphysmem.c  paging.c  physmem.c  stack.c
chroma/video/: draw.c  print.c  tty.c  tty.d
global/: a.out  crt0.c  crt0.s  crti.s
img/boot/: config  exe
inc/driver/: keyboard.h
inc/driver/generic/: device.h
inc/driver/io/: apic.h  ps2_keyboard.h  ps2_mouse.h
inc/driver/storage/: ata.h
inc/editor/: main.h
inc/kernel/: chroma.h  constants.hpp
inc/kernel/boot/: boot.h
inc/kernel/filesystem/: bootrecords.h  filesystem.h
inc/kernel/system/: core.hpp  descriptors.h  interrupts.h  io.h  memory.h  pci.h  stack.h
inc/kernel/system/acpi/: madt.h  rsdt.h
inc/kernel/system/driver/: keyboard.h
inc/kernel/system/process/: process.h
inc/kernel/video/: bitmapfont.h  draw.h
inc/lainlib/: lainlib.h
inc/lainlib/compression/: lzg.h
inc/lainlib/ethernet/e1000/: e1000.h
inc/lainlib/list/: list.h  list2.h
inc/lainlib/mutex/: spinlock.h  ticketlock.h
inc/lainlib/string/: str.h  string.h
inc/lainlib/vector/: bitmap.h  vector.h
inc/windows/: wds-core.h
include/: efiboot.h  kernel.h
include/arch/i386/: vga.h
include/efi/: Makefile  efi.h  efi_nii.h  efi_pxe.h  efiapi.h  eficompiler.h  eficon.h  efidebug.h  efidef.h  efidevp.h  efierr.h  efifs.h  efigpt.h  efiip.h  efilib.h  efilink.h  efinet.h  efipart.h  efipciio.h  efiprot.h  efipxebc.h  efirtlib.h  efiser.h  efisetjmp.h  efistdarg.h  efitcp.h  efiudp.h  efiui.h  libsmbios.h  pci22.h  romload.h
include/efi/aarch64/: efibind.h  efilibplat.h  efisetjmp_arch.h
include/efi/arm/: efibind.h  efisetjmp_arch.h
include/efi/ia32/: efibind.h  efisetjmp_arch.h  pe.h
include/efi/ia64/: efibind.h  efilibplat.h  efisetjmp_arch.h  pe.h  salproc.h
include/efi/mips64el/: efibind.h  efisetjmp_arch.h
include/efi/protocol/: adapterdebug.h  eficonsplit.h  efidbg.h  efivar.h  intload.h  legacyboot.h  piflash64.h  vgaclass.h
include/efi/x86_64/: efisetjmp_arch.h
include/kernel/: serial.h  tty.h  utils.h
include/reqs/: efibind.h  efitypes.h
iso/boot/: initrd
iso/boot/grub/: grub.cfg
kernel/: boot.c  bootstrap.c  descriptor_tables.c  graphics.c  interrupts.c  kernel.c  memory.c  ports.c  print.c  serial.c  syscalls.c  utils.c
kernel/memory/: memcmp.c  memcpy.c  memmove.c  memset.c
plugins/: c.js
src/: kernel.c  kernel.cpp
src/chroma/inc/kernel/: chroma.h
src/chroma/inc/kernel/system/: descriptors.h  interrupts.h  pci.h  stack.h
src/chroma/inc/lainlib/: lainlib.h
src/chroma/inc/lainlib/vector/: vector.h
src/chroma/lainlib/ethernet/: ethernet.h
src/chroma/lainlib/list/: basic_list.c
src/chroma/system/: pci.c
src/chroma/system/drivers/: elf.c
src/chroma/system/memory/: liballoc.c
src/chroma/video/: draw.c
src/drivers/: elf.cpp  keyboard.c
src/drivers/devices/: devices.cpp
src/drivers/devices/input/: keyboard.cpp
src/drivers/devices/io/: apic.cpp  ps2_keyboard.cpp  ps2_mouse.cpp
src/drivers/devices/storage/: ata.cpp
src/editor/: EditorMain.c  EditorMain.cpp  EditorWrite.c
src/global/: core-att.s  core.s  crt0.c  crt0.s  crtn.s  interrupt.s
src/lainlib/compression/: lzgmini.c
src/lainlib/ethernet/: ethernet.h
src/lainlib/ethernet/e1000/: E1000Driver.c
src/lainlib/list/: basic_list.c  basic_list.cpp
src/lainlib/mutex/: ticketlock.c  ticketlock.cpp
src/lainlib/string/: str.c  str.cpp
src/lainlib/vector/: vector.cpp
src/system/: core.cpp  cpu.c  cpu.cpp  interrupts.c  interrupts.cpp  pci.c  pci.cpp  rw.c  rw.cpp  serial.c  serial.cpp
src/system/acpi/: MADT.cpp  RSDP.cpp
src/system/drivers/: elf.c  keyboard.c
src/system/memory/: abstract_allocator.c  abstract_allocator.cpp  liballoc.c  liballoc.cpp  paging.c  paging.cpp  physmem.c  stack.c
src/system/process/: process.cpp
src/video/: draw.c  draw.cpp  print.c  print.cpp
src/windows/: window.cpp
tools/: elf_url.txt
tools/mkbootimg/: mkbootimg
